# BlenderAnimtool

./: .gitignore  .gitmodules  AGENTS.md
DayzAnimationTools/: README.md
blender-remote-1.3.3/: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
blender-remote-1.3.3/.claude/: memory.md
blender-remote-1.3.3/.github/workflows/: docs.yml  publish-to-pypi.yml
blender-remote-1.3.3/context/: README.md
blender-remote-1.3.3/context/design/: README.md  architecture-plan.md  mcp-test-procedure.md  remote-package-installation.md
blender-remote-1.3.3/context/hints/: README.md  howto-handle-paths-cross-platform.md  howto-install-packages-on-offline-remote-python-via-rpc.md  howto-use-pixi.md
blender-remote-1.3.3/context/hints/blender-api-ref/: README.md  bmesh-operations.md  context-management.md  glb-export.md  modal-operator-essential.md  object-selection-deletion.md  primitive-creation.md  response-parsing.md
blender-remote-1.3.3/context/logs/: 2025-01-08_bld-remote-mcp-compatibility-fix-success.md  2025-01-08_bld-remote-mcp-testing-complete-success.md  2025-01-09_bld-remote-mcp-code-execution-fix-success.md  2025-01-09_uvx-blender-remote-mcp-server-implementation-success.md  2025-01-09_uvx-blender-remote-screenshot-uuid-implementation-success.md  2025-07-08_bld-remote-mcp-service-implementation-success.md  2025-07-08_plugin-update-hot-reload-testing.md  2025-07-09_v1.1.0-automation-focused-release-success.md  2025-07-10_v1.2.0-rc2-comprehensive-development-cycle.md  2025-07-11_cli-background-mode-bug-fix-success.md  2025-07-11_mcp-server-architecture-clarity-and-test-plan-overhaul-success.md  2025-07-11_mcp-server-arguments-implementation-success.md  2025-07-14_background-mode-timer-execution-investigation-success.md  2025-07-14_base64-encoding-implementation-success.md  2025-07-14_blender-remote-client-corrected-test-results.md  2025-07-14_cli-optimization-and-documentation-update-success.md  2025-07-14_documentation-update-summary.md  2025-07-14_dual-mode-bld-remote-mcp-implementation-success.md  2025-07-14_mcp-server-configuration-optimization.md  2025-07-14_modal-operator-timer-investigation-analysis.md  2025-07-15_python-client-api-base64-cross-platform-enhancement-success.md  README.md  debug_fixes_summary_2025-07-14.md
blender-remote-1.3.3/context/plans/: README.md  blender-bg-mcp-implementation.md  blender-remote-client-test-plan-cross-platform.md  blender-remote-client-test-plan.md  mcp-server-comprehensive-test-plan.md  plan-remote-package-installation-cli.md  python-control-api-implementation.md
blender-remote-1.3.3/context/prompt-scratch/: 20250714.md  prompt-board.md
blender-remote-1.3.3/context/refcode/: .gitignore  README.md  bootstrap.sh
blender-remote-1.3.3/context/summaries/: README.md  bld-remote-mcp-implementation-complete.md  blender-auto-mcp-source-analysis.md  blender-background-mode-patterns-comparison.md  blender-background-service-patterns.md  general-rule.md  mcp-implementation-guide.md
blender-remote-1.3.3/context/tasks/: README.md  bugfix-cli-background-not-keep-alive.md  subtask-002-001-cli-scaffolding.md  subtask-002-002-pkg-info-json.md  subtask-002-003-pkg-bootstrap.md  subtask-002-004-pkg-pip-and-install.md  subtask-002-005-pkg-push-and-purge-cache.md  subtask-002-006-timeout-support.md  subtask-002-007-docs-and-smoke-tests.md  task-remote-package-installation-cli.md  task-update-documentation.md
blender-remote-1.3.3/context/tests/: README.md  run_all_tests.py  test_client_connection.py  test_fallback_communication.py  test_glb_export_focused.py  test_io_handling_focused.py  test_scene_manager_export.py  test_scene_manager_objects.py  test_with_fallback.py
blender-remote-1.3.3/context/tools/: README.md
blender-remote-1.3.3/docs/: index.md
blender-remote-1.3.3/docs/api/: blender-addon-api.md  mcp-server-api.md  python-client-api.md
blender-remote-1.3.3/docs/deprecated/: api-reference.md  cross-platform-paths.md  data-persistence.md  llm-integration.md  mcp-server.md
blender-remote-1.3.3/docs/devel/: development.md
blender-remote-1.3.3/docs/manual/: cli-tool.md  python-control-api.md
blender-remote-1.3.3/examples/data-persistence/: 01_basic_usage.py  02_multi_step_workflow.py  03_caching_expensive_operations.py  README.md
blender-remote-1.3.3/examples/mcp-usage/: 01_basic_operations.md  02_object_creation.md  03_screenshot_workflows.md  04_data_persistence.md  README.md
blender-remote-1.3.3/examples/python-control-api/: 01_basic_connection.py  02_scene_management.py  03_asset_management.py
blender-remote-1.3.3/scripts/: README.md  mcp-setup-for-claude-code.ps1  mcp-setup-for-claude-code.sh
blender-remote-1.3.3/src/blender_remote/: README.md  __init__.py  asset_manager.py  client.py  data_types.py  exceptions.py  mcp_server.py  scene_manager.py
blender-remote-1.3.3/tests/: README.md  __init__.py  conftest.py  test_cli_pkg.py  test_compact_query.py
blender-remote-1.3.3/tests/client-api/: README.md  test_client_commands.py  test_client_connection.py  test_client_scene_info.py  test_corrected_issues_investigation.py  test_error_handling.py  test_integration_mcp.py  test_scene_manager_export.py  test_scene_manager_objects.py
blender-remote-1.3.3/tests/mcp-server/: README.md  run_mcp_server.py  test_background_screenshot.py  test_base64_complex_code.py  test_base64_screenshot.py  test_fastmcp_server.py  test_functional_equivalence.py  test_mcp_server.py  test_mcp_start.py  test_numpy_execution.py  test_original_failing_code.py  test_scoping_issue.py  test_service_validation.py  test_synchronous_execution.py  test_viewport_screenshot.py
(+1146 files in other folders)
